--- a/cv_yuval/cv_yuval.html
+++ b/cv_yuval/cv_yuval.html
@@ -29,8 +29,12 @@
             <li class="nav-item">
               <a class="nav-link" onclick="scrollToContact()">Contact</a>
             </li>
+            
           </ul>
           <form class="form-inline my-2 my-lg-0">
+            <a href="my peoplecontact.html" >
+             peoplecontact
+              </a>
             <a href="https://www.linkedin.com/" >
             <img id="linkedinIcon" src="linkedinIcon.png" alt="No picture">
             </a>
